just for you endpoint added
